// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an export assignment as module member matches the snapshot 1`] = `
declare module 'my-module' {
    declare const test: string;

    export default test;

}


`;

exports[`an export assignment with isExportEquals omitted matches the snapshot 1`] = `
export default test;


`;

exports[`an export assignment with isExportEquals set to false matches the snapshot 1`] = `
export default test;


`;

exports[`an export assignment with isExportEquals set to true matches the snapshot 1`] = `
export = test;


`;
